--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <meta charset="UTF-8">
   <head><title>React.js on Repl.it</title>
-	<link rel="stylesheet" href="/app.css"> 
+	<link rel="stylesheet" href="app.css"> 
   </head>
   <body>
     <div id="root"></div>
-    <script src="/bundle.js"></script>
+    <script src="bundle.js"></script>
   </body>
 </html>
